Fixed valve popup overflow

--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,7 @@ button.gray{
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
 }
 .valve-popup-div{
     text-align: center;
